--- a/css/style-parcours-pro.css
+++ b/css/style-parcours-pro.css
@@ -8,6 +8,11 @@
     background: white;
 }
 
+#logo-grdopt {
+    background: white;
+    padding: 5px;
+}
+
 @media screen and (min-width: 768px) and (max-width: 991px) {
     #logo-hoche {
         margin-top: 10px;
@@ -18,6 +23,12 @@
     #logo-ingesup {
         margin-top: 110px;
     }
+    #logo-grdopt {
+        margin-top: 15px;
+    }
+    #logo-aps {
+        margin-top: 40px;
+    }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
@@ -27,6 +38,9 @@
     #logo-ingesup {
         margin-top: 85px;
     }
+    #logo-aps {
+        margin-top: 15px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -35,5 +49,8 @@
     }
     #logo-ingesup {
         margin-top: 75px;
+    }
+    #logo-aps {
+        margin-top: 5px
     }
 }
