Ajout parcours professionnel

--- a/css/style-general.css
+++ b/css/style-general.css
@@ -1,5 +1,5 @@
 body {
-    background: url('../img/dark_mosaic.png') repeat scroll;
+    background: url('../img/type.png') repeat scroll;
     color: white !important;
 }
 
