--- a/css/style-parcours-pro.css
+++ b/css/style-parcours-pro.css
@@ -1,3 +1,9 @@
+.tab-content {
+    background: rgba(255, 255, 255, 0.25);
+    padding: 10px;
+    border-radius: 5px;
+}
+
 #logo-descartes {
     background: white;
     padding: 5px;
