--- a/css/style-parcours-pro.css
+++ b/css/style-parcours-pro.css
@@ -1,7 +1,19 @@
-.tab-content {
+.filiere {
     background: rgba(255, 255, 255, 0.25);
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 50px;
+}
+
+.filiere div.row {
+    padding: 25px 0;
+}
+
+div.date {
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    background: #337ab7;
 }
 
 #logo-descartes {
