--- a/css/style-parcours-pro.css
+++ b/css/style-parcours-pro.css
@@ -1,12 +1,22 @@
+@keyframes chronology {
+    0% {
+        height: 0px;
+    }
+    100% {
+        height: 1180px;
+    }
+}
+
 .ligne-temps {
     width: 6px;
-    height: 1360px;
+    height: 1180px;
     background: #337ab7;
     position: absolute;
-    left: 49.5%;
+    left: 49.2%;
     top: -35px;
     border-radius: 3px;
     z-index: -1;
+    animation: chronology 1.5s;
 }
 
 .filiere {
@@ -20,11 +30,24 @@
     padding: 25px 0;
 }
 
+@keyframes bubble-size {
+    0% {
+        transform: scale(0);
+    }
+    80% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 div.date {
     border-radius: 50%;
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     background: #337ab7;
+    animation: bubble-size 0.6s;
 }
 
 #logo-descartes {
@@ -40,6 +63,21 @@ div.date {
 #logo-grdopt {
     background: white;
     padding: 5px;
+}
+
+@media screen and (max-width: 767px) {
+    .ligne-temps {
+        top: -185px;
+        height: 1230px;
+        width: 3px;
+    }
+    div.date {
+        width: 60px;
+        height: 60px;
+    }
+    div.date h4 {
+        font-size: 14px;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
