--- a/css/style-general.css
+++ b/css/style-general.css
@@ -25,6 +25,16 @@ ul[role="tablist"] {
     margin-bottom: 25px;
 }
 
+footer {
+    background: #CCCCCC !important;
+    border-top: 1px solid #EEEEEE !important;
+    color: black;
+}
+
 footer .container {
     margin-top: 12px;
+}
+
+footer .navbar-right img {
+    margin: -4px 5px 0 5px;
 }
