--- a/css/style-general.css
+++ b/css/style-general.css
@@ -15,7 +15,7 @@ nav {
 
 #img-header {
     margin-top: -20px;
-    background: url('../img/presentation/biocode.png') no-repeat scroll center;
+    background: url('../img/presentation/biocode.jpg') no-repeat scroll center;
     background-size: cover;
     min-height: 500px;
 }
