Correction defilement horizontal mobile

--- a/css/style-general.css
+++ b/css/style-general.css
@@ -1,7 +1,12 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
     background: url('../img/type.png') repeat scroll;
     color: white !important;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .navbar-brand h1 {
