--- a/css/style-parcours-pro.css
+++ b/css/style-parcours-pro.css
@@ -89,6 +89,19 @@ div.date {
     #logo-ingesup {
         margin-top: 10px;
     }
+    html,
+    body {
+        overflow-x: hidden;
+    }
+    #wrapper {
+        padding-bottom: 85px;
+    }
+    footer {
+        text-align: center;
+        position: relative !important;
+        bottom: 40px !important;
+        padding-bottom: 15px;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
