--- a/css/style-general.css
+++ b/css/style-general.css
@@ -1,7 +1,29 @@
+@font-face {
+    font-family: 'eraserregular';
+    src: url('eraser/EraserRegular-webfont.eot');
+    src: url('eraser/EraserRegular-webfont.eot?#iefix') format('embedded-opentype'), url('eraser/EraserRegular-webfont.woff') format('woff'), url('eraser/EraserRegular-webfont.ttf') format('truetype'), url('eraser/EraserRegular-webfont.svg#eraserregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background: url('../img/type.png') repeat scroll;
-    color: white !important;
+    color: #CCC !important;
     height: 100%;
+    font-family: 'Catamaran', sans-serif !important;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'eraserregular', sans-serif !important;
+    margin-bottom: 20px !important;
+}
+
+p {
+    font-size: 15px !important;
 }
 
 .navbar-brand h1 {
@@ -13,18 +35,6 @@ nav {
     border-radius: 0px !important;
 }
 
-#img-header {
-    margin-top: -20px;
-    background: url('../img/presentation/biocode.jpg') no-repeat scroll center;
-    background-size: cover;
-    min-height: 500px;
-}
-
-#img-profile {
-    width: 204px;
-    border: 2px solid #22223e;
-}
-
 .flex {
     display: flex !important;
     flex-direction: column;
@@ -33,13 +43,6 @@ nav {
 
 .flex-row {
     flex-direction: row;
-}
-
-#wrapper {
-    min-height: 100%;
-    height: auto;
-    margin-bottom: -40px;
-    padding-bottom: 60px;
 }
 
 ul[role="tablist"] {
@@ -58,4 +61,13 @@ footer .container {
 
 footer .navbar-right img {
     margin: -4px 5px 0 5px;
+}
+
+@media screen and (max-width: 767px) {
+    footer {
+        text-align: center;
+        position: relative !important;
+        margin-top: 10px;
+        padding-bottom: 15px;
+    }
 }
