--- a/css/style-parcours-pro.css
+++ b/css/style-parcours-pro.css
@@ -17,10 +17,12 @@
     border-radius: 3px;
     z-index: -1;
     animation: chronology 1.5s;
+    display: none;
+    /*A finir si il me reste du temps*/
 }
 
 .filiere {
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, 0.1);
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 50px;
@@ -50,25 +52,26 @@ div.date {
     animation: bubble-size 0.55s;
 }
 
-#logo-hoche {
+.logo-hoche {
     margin-top: 120px;
 }
 
-#logo-descartes {
+.logo-descartes {
     background: white;
     padding: 5px;
     margin-top: 240px;
 }
 
-#logo-ingesup {
+.logo-ingesup {
     padding: 5px;
     background: white;
     margin-top: 60px;
 }
 
-#logo-grdopt {
+.logo-grdopt {
     background: white;
     padding: 5px;
+    margin-top: 63px;
 }
 
 @media screen and (max-width: 767px) {
@@ -78,65 +81,53 @@ div.date {
         width: 3px;
     }
     div.date {
-        width: 60px;
-        height: 60px;
+        width: 80px;
+        height: 80px;
     }
     div.date h4 {
         font-size: 14px;
     }
-    #logo-hoche,
-    #logo-descartes,
-    #logo-ingesup {
+    .logo-hoche,
+    .logo-descartes,
+    .logo-ingesup,
+    .logo-grdopt {
         margin-top: 10px;
     }
     html,
     body {
         overflow-x: hidden;
     }
-    #wrapper {
-        padding-bottom: 85px;
-    }
-    footer {
-        text-align: center;
-        position: relative !important;
-        bottom: 40px !important;
-        padding-bottom: 15px;
-        margin-bottom: -40px !important;
-    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-    #logo-ingesup {
+    .logo-ingesup {
         margin-top: 60px;
     }
-    #logo-grdopt {
-        margin-top: 15px;
-    }
-    #logo-aps {
+    .logo-aps {
         margin-top: 40px;
     }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-    #logo-descartes {
+    .logo-descartes {
         margin-top: 225px;
     }
-    #logo-ingesup {
+    .logo-ingesup {
         margin-top: -5px;
     }
-    #logo-aps {
+    .logo-aps {
         margin-top: 15px;
     }
 }
 
 @media screen and (min-width: 1200px) {
-    #logo-descartes {
+    .logo-descartes {
         margin-top: 216px;
     }
-    #logo-ingesup {
+    .logo-ingesup {
         margin-top: 60px;
     }
-    #logo-aps {
+    .logo-aps {
         margin-top: 5px
     }
 }
