--- a/css/style-accueil.css
+++ b/css/style-accueil.css
@@ -1,8 +1,16 @@
+.jumbotron {
+    background: #171717 !important;
+}
+
+.jumbotron p {
+    font-size: 18px !important;
+}
+
 #img-header {
     margin-top: -20px;
     background: url('../img/presentation/biocode.jpg') no-repeat scroll center;
     background-size: cover;
-    min-height: 500px;
+    height: 50vh;
 }
 
 #img-profile {
@@ -21,9 +29,6 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-    #img-header {
-        min-height: 280px;
-    }
     #img-profile {
         width: 150px;
         border-width: 0.5px;
@@ -31,9 +36,6 @@
 }
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-    #img-header {
-        min-height: 330px;
-    }
     #img-profile {
         width: 170px;
         border-width: 1px;
