--- a/css/style-general.css
+++ b/css/style-general.css
@@ -35,6 +35,10 @@ nav {
     border-radius: 0px !important;
 }
 
+.wrapper {
+    padding-bottom: 60px !important;
+}
+
 .flex {
     display: flex !important;
     flex-direction: column;
@@ -82,5 +86,8 @@ footer .navbar-right img {
     }
     footer .flex-row {
         flex-direction: row;
+    }
+    .wrapper {
+        padding-bottom: 0px !important;
     }
 }
