--- a/css/style-parcours-pro.css
+++ b/css/style-parcours-pro.css
@@ -97,6 +97,9 @@ div.date {
     body {
         overflow-x: hidden;
     }
+    .tab-pane .flex-row {
+        flex-direction: row !important;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
