--- a/css/style-general.css
+++ b/css/style-general.css
@@ -26,6 +26,10 @@ p {
     font-size: 18px !important;
 }
 
+ul li {
+    font-size: 18px;
+}
+
 .navbar-brand h1 {
     margin-top: -10px;
     color: #333;
