--- a/css/style-general.css
+++ b/css/style-general.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'eraserregular';
-    src: url('eraser/EraserRegular-webfont.eot');
-    src: url('eraser/EraserRegular-webfont.eot?#iefix') format('embedded-opentype'), url('eraser/EraserRegular-webfont.woff') format('woff'), url('eraser/EraserRegular-webfont.ttf') format('truetype'), url('eraser/EraserRegular-webfont.svg#eraserregular') format('svg');
+    font-family: 'djb_chalk_it_upregular';
+    src: url('djb/djb_chalk_it_up-webfont.eot');
+    src: url('djb/djb_chalk_it_up-webfont.eot?#iefix') format('embedded-opentype'), url('djb/djb_chalk_it_up-webfont.woff2') format('woff2'), url('djb/djb_chalk_it_up-webfont.woff') format('woff'), url('djb/djb_chalk_it_up-webfont.ttf') format('truetype'), url('djb/djb_chalk_it_up-webfont.svg#djb_chalk_it_upregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -18,8 +18,16 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'eraserregular', sans-serif !important;
+    font-family: 'djb_chalk_it_upregular', sans-serif !important;
     margin-bottom: 20px !important;
+}
+
+h2 {
+    font-size: 50px !important;
+}
+
+h4 {
+    font-size: 22px !important;
 }
 
 p {
@@ -37,6 +45,10 @@ ul li {
 
 nav {
     border-radius: 0px !important;
+}
+
+.jumbotron .btn {
+    margin-right: 20px !important;
 }
 
 .wrapper {
