--- a/css/style-general.css
+++ b/css/style-general.css
@@ -69,7 +69,7 @@ nav {
     flex-direction: row;
 }
 
-.flex img {
+.flex img-amp {
     margin-bottom: 15px;
 }
 
@@ -87,7 +87,7 @@ footer .container {
     margin-top: 12px;
 }
 
-footer .navbar-right img {
+footer .navbar-right amp-img, footer .navbar-right svg {
     margin: -4px 5px 0 5px;
 }
 
