--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -25,6 +25,15 @@ ul.nav-pills > li > a > h2 {
     border-radius: 5px;
 }
 
+.noliststyle {
+    list-style-type: none;
+}
+
+#profile {
+    max-width: 250px;
+    margin: -70px auto 30px auto;
+}
+
 .entry > .dashed-border:hover {
     border-color: rgba(26,188,156,0.5);
     transition: all 0.3s ease-in-out;
@@ -51,6 +60,17 @@ div.divider > i:before {
     color: rgba(255,255,255,0.25);
 }
 
+div.slider-caption-small {
+    font-size: 12px;
+    bottom: 10px;
+    left: 10px;
+}
+
+div.slider-caption-small a {
+    display: inline !important;
+    color: #FFF;
+}
+
 div.rounded-skill, div.rounded-skill > div.counter {
     width: 70px;
     height: 70px;
@@ -62,6 +82,34 @@ div.rounded-skill {
 
 div.rounded-skill > div.counter {
     line-height: 70px;
+}
+
+.topmarg10 {
+    margin-top: 10px;
+}
+
+#cbar {
+    width: 58%;
+}
+
+#jsbar {
+    width: 42%;
+}
+
+#refbar {
+    width: 32%;
+}
+
+#phpbar {
+    width: 12%;
+}
+
+#bootstrapbar {
+    width: 8%;
+}
+
+#angjsbar {
+    width: 50%;
 }
 
 #footer * {
@@ -80,11 +128,43 @@ div.rounded-skill > div.counter {
     .col-padding {
         padding: 60px 30px;
     }
+
+    #profile {
+        max-width: 200px;
+        margin: 20px auto 10px auto;
+    }
+}
+
+@media screen and (max-width: 479px) {
+    .specialmargin-container {
+        width:auto !important;
+    }
+
+    #profile {
+        max-width: 100px;
+        margin: 5px auto 10px auto;
+    }
+}
+
+@media screen and (max-width: 767px) and (min-width: 480px) {
+    .specialmargin-container {
+        width:auto !important;
+    }
+
+    #profile {
+        max-width: 150px;
+        margin: 5px auto 10px auto;
+    }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
     #header.transparent-header.floating-header .container {
         width: 970px;
+    }
+
+    #profile {
+        max-width: 225px;
+        margin: -50px auto 30px auto;
     }
 }
 
